--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <label>                                          <!-- 14) Label wraps text + input for better accessibility -->
           What do you want to search?                    <!-- 15) Human-readable label text -->
-          <input                                         <!-- 16) Input element for search text -->
+          <input                                         <!-- 16) Input element for search text. -->
             id="query"                                   <!-- 17) Unique id so JavaScript can find this element -->
             type="text"                                  <!-- 18) Standard single-line text field -->
             placeholder="City, artist, station or movie title" <!-- 19) Grey hint text inside the box -->
